--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,39 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark" />
-    <title>Solopreneur CRM</title>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: hidden;
-        background-color: #1e1e1e;
-        color: #ffffff;
-      }
-      
-      /* Loading state */
-      .app-loading {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        width: 100vw;
-        background-color: #1e1e1e;
-        color: #ffffff;
-      }
-    </style>
+    <meta name="description" content="High-Performance Web Application Seed - A production-ready starting point for building scalable, real-time applications." />
+    <title>HPW Seed - High-Performance Web Application</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div id="app">
-      <div class="app-loading">
-        <div>Loading Solopreneur CRM...</div>
-      </div>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html> 
